--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
+  fl_chart: ^0.66.0
   
   # Utilities
   intl: ^0.18.1
@@ -34,7 +35,7 @@ dependencies:
   
   # QR Code
   qr_flutter: ^4.1.0
-  google_sign_in: 6.2.1
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
@@ -44,10 +45,21 @@ dev_dependencies:
   freezed: ^2.4.5
   json_serializable: ^6.7.1
   riverpod_generator: ^2.3.9
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
+  assets:
+    - assets/
+    - assets/icon/
+
+# Configuración del ícono de la app
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  min_sdk_android: 21
+  # Para notificaciones en Android
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
