--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # QR Code
   qr_flutter: ^4.1.0
   google_sign_in: ^6.1.6
+  
+  # Updates
+  http: ^1.1.2
+  package_info_plus: ^5.0.1
+  path_provider: ^2.1.1
+  open_filex: ^4.3.4
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
