feat: Implementar sistema de paletas de colores completas
- Refactorizar sistema de tematización de un solo color a paletas completas
- Agregar 6 paletas predefinidas con colores armónicos
- Implementar 6 colores por paleta (primary, secondary, tertiary, danger, success, warning)
- Mejorar selector visual con mini-swatches
- Actualizar componentes principales (tabs, buttons, badges)
- Mantener compatibilidad con sistema anterior
- Preservar modo claro/oscuro sin cambios en fondos

Tipo Material You / One UI con UI más dinámica y moderna

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- Permiso para notificaciones en Android 13+ -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <!-- Permiso para instalar paquetes (necesario para sistema de actualización) -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
     
     <application
         android:label="Gestión Gastos"
@@ -40,5 +42,16 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/notification_color" />
+        
+        <!-- FileProvider para compartir APKs de forma segura -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 </manifest>
