--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   riverpod_generator: ^2.3.9
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.8
 
 flutter:
   uses-material-design: true
@@ -67,6 +68,19 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon/app_icon.png"
   min_sdk_android: 21
-  # Para notificaciones en Android
-  adaptive_icon_background: "#FFFFFF"
+  # Adaptive icons para Android 8.0+ (fondo azul degradado)
+  adaptive_icon_background: "#3D5AFE"
   adaptive_icon_foreground: "assets/icon/app_icon.png"
+  # Generar íconos de notificación
+  android_notification_icon: true
+  android_notification_icon_color: "#3D5AFE"
+
+# Configuración del splash screen
+flutter_native_splash:
+  color: "#3D5AFE"
+  image: "assets/icon/app_icon.png"
+  android: true
+  ios: true
+  android_12:
+    color: "#3D5AFE"
+    image: "assets/icon/app_icon.png"
