--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
     
     <application
-        android:label="Gestión Gastos"
+        android:label="NFTB Wallet"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
