--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app_gestion_gastos
-description: NFTB Wallet - Para nosotros
+description: Aplicación móvil para parejas que comparten gastos
 publish_to: 'none'
-version: 1.1.3+8
+version: 1.1.4+7
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
