--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: app_gestion_gastos
 description: Aplicación móvil para parejas que comparten gastos
 publish_to: 'none'
-version: 1.1.4+7
+version: 1.1.5+8
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -82,7 +82,7 @@ flutter_native_splash:
   image: "assets/icon/app_icon.png"
   android: true
   ios: true
-  web: false
+  web: true  # ✅ Habilitado para Web
   android_12:
     color: "#FFFFFF"
     image: "assets/icon/app_icon.png"
